force-app/main/default/objects/Employee_Engagement__c/Employee_Engagement__c.object-meta.xml
<CustomObject>
    <label>Employee Engagement</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Employee Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>