force-app/main/default/objects/Employee_Engagement__c/fields/Employee_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_s_Email__c</fullName>
    <label>Employee&apos;s Email</label>
    <type>Email</type>
</CustomField>