force-app/main/default/objects/Employee_Engagement__c/fields/Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Resource</label>
    <type>Checkbox</type>
</CustomField>