force-app/main/default/objects/Employee_Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Engagements</label>
</ListView>